deploy/dev/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valkey-system
  labels:
    app.kubernetes.io/part-of: managed-valkey
